--- a/FuckOff/FuckOff/MainPage.xaml
+++ b/FuckOff/FuckOff/MainPage.xaml
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:FuckOff"
              x:Class="FuckOff.MainPage">
+  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
 
-  <Label Text="Welcome to Xamarin Forms!"
-           VerticalOptions="Center"
-           HorizontalOptions="Center" />
-
+  <ContentPage.ToolbarItems>
+    <ToolbarItem Text="About"
+               Order="Secondary"
+                Clicked="OnAboutToolbarItemClicked" />
+  </ContentPage.ToolbarItems>
+  <ContentPage.Content>
+    <Label Text="Fuck off!"/>
+  </ContentPage.Content>
 </ContentPage>
