--- a/FuckOff/FuckOff/MainPage/MainPage.xaml
+++ b/FuckOff/FuckOff/MainPage/MainPage.xaml
@@ -8,6 +8,9 @@
     <ToolbarItem Text="About"
                Order="Secondary"
                 Clicked="OnAboutToolbarItemClicked" />
+    <ToolbarItem Text="Settings"
+              Order="Secondary"
+               Clicked="OnSettingsToolbarItemClicked" />
   </ContentPage.ToolbarItems>
   <ContentPage.Content>
     <Label Text="Fuck off!"/>
