--- a/FuckOff/FuckOff/MainPage/MainPage.xaml
+++ b/FuckOff/FuckOff/MainPage/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FuckOff.MainPage">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+ 
 
   <ContentPage.ToolbarItems>
     <ToolbarItem Text="About"
@@ -13,6 +13,27 @@
                Clicked="OnSettingsToolbarItemClicked" />
   </ContentPage.ToolbarItems>
   <ContentPage.Content>
-    <Label Text="Fuck off!"/>
+
+    <Grid x:Name="mainPageGrid" RowSpacing="5" ColumnSpacing="5">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*" />
+        <RowDefinition Height="Auto" />
+        <RowDefinition Height="*" />
+
+      </Grid.RowDefinitions>
+
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="Auto" />
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
+
+      <Button
+        Text="Fuck Off!"
+          Grid.Row="1"
+             Grid.Column="1"
+            Command="{Binding FuckOffCommand}" />
+
+    </Grid>
   </ContentPage.Content>
 </ContentPage>
