--- a/FuckOff/FuckOff/MainPage/MainPage.xaml
+++ b/FuckOff/FuckOff/MainPage/MainPage.xaml
@@ -18,6 +18,7 @@
       <Grid.RowDefinitions>
         <RowDefinition Height="*" />
         <RowDefinition Height="Auto" />
+        <RowDefinition Height="Auto" />
         <RowDefinition Height="*" />
 
       </Grid.RowDefinitions>
@@ -28,9 +29,16 @@
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
 
+      <Label
+        Text="{Binding FuckOffText}"
+        Grid.Row="0"
+        Grid.Column="0"
+        Grid.ColumnSpan="3"
+        Grid.RowSpan="2"/>
+        
       <Button
         Text="Fuck Off!"
-          Grid.Row="1"
+          Grid.Row="2"
              Grid.Column="1"
             Command="{Binding FuckOffCommand}" />
 
