--- a/FuckOff/FuckOff/SettingsPage/SettingsPage.xaml
+++ b/FuckOff/FuckOff/SettingsPage/SettingsPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FuckOff.SettingsPage">
+             x:Class="FuckOff.SettingsPage"
+             Title="Fuck Off - Settings">
   <ContentPage.Content>
     <ScrollView
         HeightRequest ="100"
