--- a/FuckOff/FuckOff/MainPage/MainPage.xaml
+++ b/FuckOff/FuckOff/MainPage/MainPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:FuckOff"
              x:Class="FuckOff.MainPage"
              Title="Fuck Off">
  
@@ -16,38 +17,56 @@
 
     <Grid x:Name="mainPageGrid" RowSpacing="5" ColumnSpacing="5">
       <Grid.RowDefinitions>
-        <RowDefinition Height="*" />
-        <RowDefinition Height="Auto" />
-        <RowDefinition Height="Auto" />
+        <RowDefinition Height="160" />
         <RowDefinition Height="Auto" />
         <RowDefinition Height="*" />
+        <RowDefinition Height="Auto" />
+        <RowDefinition Height="Auto" />
+        <RowDefinition Height="40" />
+        <RowDefinition Height="Auto" />
 
       </Grid.RowDefinitions>
 
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="*" />
-        <ColumnDefinition Width="Auto" />
+        <ColumnDefinition Width="240" />
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
 
+      <Image Source="{local:ImageResource FuckOff.Images.old_man.jpg}"
+             BackgroundColor="White"
+             Grid.Row="0"
+             Grid.Column="1"/>
+
+      <ContentView Padding="20,10,20,0" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3">
+
       <Label
         Text="{Binding FuckOffText}"
-        Grid.Row="0"
-        Grid.Column="0"
-        Grid.ColumnSpan="3"
-        Grid.RowSpan="2"/>
+        HorizontalTextAlignment="Start"
+        FontSize="Medium"/>
+      </ContentView>
         
       <Button
         Text="Receive random insult"
-          Grid.Row="2"
+          Grid.Row="3"
              Grid.Column="1"
             Command="{Binding FuckOffCommand}" />
 
       <Button
         Text="Give a fuck"
-        Grid.Row="3"
+        Grid.Row="4"
         Grid.Column="1"
         Command="{Binding ShareCommand}" />
+
+
+      <Label
+        Text="Fuck off and die. ZombieConsulting 2017"
+        VerticalTextAlignment="End"
+        HorizontalTextAlignment="End"
+        FontSize="Micro"
+        Grid.Row="6"
+        Grid.Column="1"
+        Grid.ColumnSpan="2"/>
 
     </Grid>
   </ContentPage.Content>
